--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dev_dependencies:
   android_multiple_identifier: ^1.0.3
   csv: ^5.0.1
   file_picker: ^5.2.7
+  flutter_blue_plus: ^1.5.2
   flutter_file_manager: ^0.2.0
   flutter_lints: ^2.0.0
   flutter_test:
@@ -78,6 +79,9 @@ flutter:
     - family: RaceSport
       fonts:
         - asset: lib/fonts/RaceSportFree.ttf
+    - family: Poppins
+      fonts:
+        - asset: lib/assets/fonts/Poppins-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
